# hqnn-fraud-detection-benchmark

./: .gitignore  CLAUDE.md  LICENSE  README.md  appendix_classical_operating_points.csv  pyproject.toml
.github/workflows/: ci.yml
configs/: ablation_10qubits.yaml  default.yaml
results/: ablation_noise.json
results/folds/: parallel_fold_0.json  parallel_fold_1.json  parallel_fold_2.json  parallel_fold_3.json  parallel_fold_4.json  shnn_fold_0.json  shnn_fold_1.json  shnn_fold_2.json  shnn_fold_3.json  shnn_fold_4.json
results/metrics/: benchmark_20260414_015923.json  benchmark_20260414_023035.json  benchmark_20260414_162000.json  benchmark_20260414_212846.json  benchmark_20260414_215847.json  benchmark_20260414_225101.json  benchmark_20260415_010528.json  benchmark_20260415_011802.json  benchmark_20260415_012831.json  benchmark_20260415_014420.json  benchmark_20260415_031627.json  statistics_20260430_220510.json
scratch/: classical_operating_points.py  tabnet_operating_points.py
scripts/: ablation_no_vqc.py  ablation_noise.py  run_benchmark.py  run_conceptual_figures.py  run_fold.py  run_plots.py  run_statistics.py
src/: config.py
src/data/: cv.py  loader.py  preprocessing.py
src/evaluation/: metrics.py  plots.py  statistics.py
src/models/: registry.py
src/models/classical/: ft_transformer.py  resnet_tabular.py  saint.py  snn.py  tabnet_model.py
src/models/quantum/: parallel.py  shnn.py  vqc.py
src/training/: parallel.py  trainer.py
tests/: test_config.py  test_data.py  test_metrics.py  test_models.py  test_plots.py  test_preprocessing.py
