[project]
authors = [{name = "Gregor Kobilarov", email = "gregor.kobilarov@gmail.com"}]
dependencies = []
name = "hqnn-fraud-detection-benchmark"
requires-python = ">=3.12,<3.13"
version = "0.1.0"
description = "Empirical benchmark: Hybrid Quantum Neural Networks vs Classical Deep Learning for tabular binary classification"
license = {text = "MIT"}

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

# ── Pixi workspace ───────────────────────────────────────────────────────────

[tool.pixi.workspace]
channels = ["conda-forge", "pytorch"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.dependencies]
python = ">=3.12,<3.13"
numpy = ">=1.26"
pandas = ">=2.1"
scipy = ">=1.12"
scikit-learn = ">=1.4"
imbalanced-learn = ">=0.12"
pennylane = ">=0.38"
autoray = "<0.7"
matplotlib = ">=3.8"
seaborn = ">=0.13"
pyyaml = ">=6.0"
pydantic = ">=2.5"
rich = ">=13.7"
jupyter = ">=1.0"
ipykernel = ">=6.0"
tqdm = ">=4.66"
pytest = ">=8.0"
pytest-cov = ">=4.1"
ruff = ">=0.3"
pytorch = ">=2.2"

[tool.pixi.pypi-dependencies]
pennylane-lightning = ">=0.38"
pytorch-tabnet = ">=4.1"
hqnn_fraud_detection_benchmark = { path = ".", editable = true }

[tool.pixi.tasks]
benchmark = "python scripts/run_benchmark.py"
fold = "python scripts/run_fold.py"
plots = "python scripts/run_plots.py"
test = "pytest tests/ -v"
test-cov = "pytest tests/ -v --cov=src --cov-report=term-missing"
lint = "ruff check src/ scripts/ tests/"
format = "ruff format src/ scripts/ tests/"

# ── Tooling ──────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
