[project]
authors = [{name = "Gregor Kobilarov", email = "gregor.kobilarov@gmail.com"}]
dependencies = []
name = "hqnn-fraud-detection-benchmark"
requires-python = ">=3.12,<3.13"
version = "0.1.0"
description = "Empirical benchmark: Hybrid Quantum Neural Networks vs Classical Deep Learning for tabular binary classification"
license = {text = "MIT"}

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ── Pixi workspace ───────────────────────────────────────────────────────────

[tool.pixi.workspace]
channels = ["conda-forge", "pytorch"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.dependencies]
python = ">=3.12,<3.13"
numpy = "*"
pandas = "*"
scipy = "*"
scikit-learn = "*"
imbalanced-learn = "*"
matplotlib = "*"
seaborn = "*"
pyyaml = "*"
pydantic = "*"
rich = "*"
jupyter = "*"
ipykernel = "*"
tqdm = "*"
pytest = "*"
pytest-cov = "*"
ruff = "*"
pytorch = "*"

[tool.pixi.pypi-dependencies]
pennylane = "*"
pennylane-lightning = "*"
pytorch-tabnet = "*"
hqnn_fraud_detection_benchmark = { path = ".", editable = true }

[tool.pixi.tasks]
benchmark = "python scripts/run_benchmark.py"
fold = "python scripts/run_fold.py"
plots = "python scripts/run_plots.py"
test = "pytest tests/ -v"
test-cov = "pytest tests/ -v --cov=src --cov-report=term-missing"
lint = "ruff check src/ scripts/ tests/"
format = "ruff format src/ scripts/ tests/"

# ── Tooling ──────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
